--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@
 
 /* hero-section */
 .bg-img-hero {
-    background-image: url("../image/png/NFT-C_bg_img.png");
+    background-image: url("../image/png/nft-bg-img.png");
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
